--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.cpxiao.blackandwhite"
         minSdkVersion 14
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 103
+        versionName "1.0.3"
     }
 
     buildTypes {
@@ -69,7 +69,7 @@ dependencies {
 //    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 //    testCompile 'junit:junit:4.12'
 
-//    compile project(':AndroidUtils:library')
+    compile project(':AndroidUtils:library')
     compile 'com.android.support:appcompat-v7:25.3.1'
 
     /**
